# libes

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  README_CRATES_IO.md  deny.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: add-algorithm.md  del-algorithm.md  fix-algorithm.md
.github/workflows/: rust.yml
src/: lib.rs  markers.rs
src/aead/: mod.rs  xchacha20poly1305.rs
src/auth/: generics.rs  hmacsha256.rs  mod.rs
src/ec/: mod.rs  x25519.rs
src/enc/: aes256gcm.rs  chacha20poly1305.rs  generics.rs  mod.rs  xchacha20poly1305.rs
src/key/: conversion.rs  ed25519.rs  generics.rs  mod.rs  secp256k1.rs  secp256r1.rs  secp384r1.rs  x25519.rs
tests/: integration.rs  lorem_ipsum.txt  secp256k1_aes256gcm.rs  secp256r1_aes256gcm.rs  secp384r1_aes256gcm.rs
