[package]
    name = "libes"
    version = "0.1.9"
    authors = ["Tomas Rohatynski"]
    edition = "2021"
    rust-version = "1.60"
    description = "Collection of Elliptic Curve Integrated Encryption Scheme(s)"
    readme = "README_CRATES_IO.md"
    homepage = "https://github.com/TJRoh01/libes"
    repository = "https://github.com/TJRoh01/libes"
    license = "MIT OR Apache-2.0"
    keywords = ["library", "encryption", "cypto", "ecc", "ecies"]
    categories = ["cryptography", "data-structures", "encoding", "algorithms"]

[package.metadata.docs.rs]
    all-features = true

[lib]
    name = "libes"
    crate-type = ["rlib", "dylib"]
    path = "src/lib.rs"
    test = true
    doctest = true
    bench = false
    doc = true

[features]
# Variant
    ECIES-MAC = []
    ECIES-AEAD = []
    ECIES-SYN = []
# Elliptic Curve
    x25519 = ["dep:x25519-dalek"]
    ed25519 = ["dep:ed25519-dalek"]
    P-256 = ["secp256r1"]
    secp256r1 = []
    P-384 = ["secp384r1"]
    secp384r1 = []
    P-521 = ["secp521r1"]
    secp521r1 = []
# Encryption
    XChaCha20-Poly1305 = ["dep:chacha20poly1305"]
    AES-GCM = []
# Authentication
    HMAC-SHA256 = ["dep:hmac"]
    HMAC-SHA512 = ["dep:hmac"]

[dependencies]
    rand_core = { version = "0.6.4", features = ["getrandom"] }
    sha2 = "0.10.6"
    hkdf = "0.12.3"
    hmac = { version = "0.12.1", optional = true }
    x25519-dalek = { version = "2.0.0-pre.1", optional = true }
    ed25519-dalek = { version = "1.0.1", optional = true }
    chacha20poly1305 = { version = "0.10.1", optional = true }