[package]
    name = "libes"
    version = "0.10.0"
    authors = ["Tomas Rohatynski"]
    edition = "2021"
    rust-version = "1.65"
    description = "Collection of Elliptic Curve Integrated Encryption Scheme(s)"
    readme = "README_CRATES_IO.md"
    homepage = "https://github.com/TJRoh01/libes"
    repository = "https://github.com/TJRoh01/libes"
    license = "MIT OR Apache-2.0"
    keywords = ["library", "encryption", "cypto", "ecc", "ecies"]
    categories = ["cryptography", "data-structures", "encoding", "algorithms"]

[package.metadata.docs.rs]
    all-features = true

[lib]
    name = "libes"
    crate-type = ["rlib", "dylib"]
    path = "src/lib.rs"
    test = true
    doctest = true
    bench = false
    doc = true

[features]
# Variant
    ECIES-MAC = []
    ECIES-AEAD = []
    ECIES-SYN = []
# Elliptic Curve
    x25519 = ["dep:x25519-dalek"]
    ed25519 = ["dep:ed25519-dalek", "dep:x25519-dalek", "dep:curve25519-dalek"]
    K-256 = ["secp256k1"]
    secp256k1 = ["dep:k256"]
    P-256 = ["secp256r1"]
    secp256r1 = ["dep:p256"]
    P-384 = ["secp384r1"]
    secp384r1 = ["dep:p384"]
# Encryption
    ChaCha20-Poly1305 = ["dep:chacha20poly1305"]
    XChaCha20-Poly1305 = ["dep:chacha20poly1305"]
    AES256-GCM = ["dep:aes-gcm"]
# Authentication
    HMAC-SHA256 = ["dep:hmac"]

[dependencies]
    rand_core = { version = "0.6", features = ["getrandom"] }
    sha2 = "0.10"
    hkdf = "0.12"
    hmac = { version = "0.12", optional = true }
    x25519-dalek = { version = "2.0.0-rc.2", features = ["reusable_secrets", "static_secrets"], optional = true }
    ed25519-dalek = { version = "2.1", optional = true }
    curve25519-dalek = { version = "4.1", optional = true }
    k256 = { version = "0.13", features = ["arithmetic", "ecdh", "ecdsa"], optional = true }
    p256 = { version = "0.13", features = ["arithmetic", "ecdh", "ecdsa"], optional = true }
    p384 = { version = "0.13", features = ["arithmetic", "ecdh", "ecdsa"], optional = true }
    chacha20poly1305 = { version = "0.10", optional = true }
    aes-gcm = { version = "0.10", optional = true }
    thiserror = "1.*" 

[dev-dependencies]
    rand = "0.7"